<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Let\'s Carpool</string>
    <string name="action_settings">Settings</string>
    <string name="im_a_driver">I\'m a Driver</string>
    <string name="im_a_rider">I\.m a Rider</string>
    <string name="proceed_to_profile">Proceed to Profile</string>
    <string name="name">Name: </string>
    <string name="email">Email: </string>
    <string name="cell">Cell #: </string>
    <string name="driver">Driver</string>
    <string name="rider">Rider</string>
    <string name="signup">Sign up</string>
    <string name="car_type">Car Type </string>
    <string name="max_riders">Max Riders </string>
    <string name="music">Music </string>
    <string name="smoker">Smoker</string>
    <string name="driver_setup">Driver Setup</string>
    <string name="rider_setup">RIder Setup</string>
    <string name="looking_for">Looking For </string>
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point</string>
    <string name="compensation">Compensation</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="published_routes">Published Routes</string>
    <string name="scheduled_rendezvous">Scheduled Rendezvous</string>
    <string name="comment">Comment: </string>
    <string name="submit">Submit</string>
    <string name="date">Date: </string>
    <string name="time_depart">Time Depart:</string>
    <string name="car_make">Car Make: </string>
    <string name="car_model">Car Model: </string>
    <string name="car_mileage">Car Mileage: </string>
    <string name="post_ride_button">Post Ride!!!!!</string>
    <string name="find_ride_button">Find Ride!!!!!</string>
    <string name="hint_location">Enter Location</string>
    <string name="str_find_btn">Find</string>
    
</resources>