<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TableRow>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >
        </EditText>
        
    </TableRow>
    
    <TableRow>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >
        </EditText>
        
    </TableRow>
    
    <TableRow>

        <TextView
            android:id="@+id/cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cell" />

        <EditText
            android:id="@+id/cell_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" >
        </EditText>
        
    </TableRow>

            <CheckBox
                android:id="@+id/driver_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver" />

            <CheckBox
                android:id="@+id/rider_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rider" />

            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup" />
    
</TableLayout>