<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
 
    <TableRow>

        <TextView
            android:id="@+id/looking_for"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/looking_for" />

        <EditText
            android:id="@+id/looking_for_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >
        </EditText>
        
    </TableRow>
   
    <TableRow>

        <TextView
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music" />

        <EditText
            android:id="@+id/music_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >
        </EditText>
        
    </TableRow>

    <CheckBox
        android:id="@+id/smoker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smoker" />
    
    <Button
        android:id="@+id/rider_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rider_setup" />

</TableLayout>