<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/pending_requests"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:text="@string/pending_requests" />

    <Button
        android:id="@+id/published_routes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pending_requests"
        android:layout_marginTop="82dp"
        android:text="@string/published_routes" />

    <Button
        android:id="@+id/scheduled_rendezvous"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/published_routes"
        android:layout_marginTop="83dp"
        android:text="@string/scheduled_rendezvous" />

</RelativeLayout>