<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
   
    <TableRow>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <EditText
            android:id="@+id/date_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="date" >
        </EditText>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/time_depart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_depart" />

        <EditText
            android:id="@+id/time_depart_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >
        </EditText>
    </TableRow>

    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Map Me" />
    
    <Button
        android:id="@+id/find_ride_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_ride_button" />

</TableLayout>