<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

     <Button
        android:id="@+id/driver_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="60dp"
        android:text="@string/im_a_driver" />
     
    <Button
        android:id="@+id/rider_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/driver_view"
        android:layout_below="@+id/driver_view"
        android:layout_marginTop="32dp"
        android:text="@string/im_a_rider" />

    <Button
        android:id="@+id/profile_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/driver_view"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="88dp"
        android:text="@string/proceed_to_profile" />

</RelativeLayout>